cambios en endpoints y configuración de seguridad , se agregan json e instrucciones de uso
cambios en endpoints y configuración de seguridad , se agregan json e instrucciones de uso
